# classification-of-driving-style

./: .gitignore  README.md  docker-compose.yml  requirements.txt
Magistracy. Neural network model version 1/: cleared_data.csv  information about the project.md  model.ipynb
Magistracy. Neural network model version 2/: information about the project.md  Магистерская_диссертация.ipynb
project/database_service/: Dockerfile  classification_driving_style.db  create_database.py  create_session.py  database_structure_and_initial_data.sql  main.py  pyproject.toml  requirements.txt
project/database_service/models/: car.py  driver.py  driver_car.py  trip.py  user.py
project/database_service/routes/: car_routes.py  driver_routes.py  trip_routes.py  user_routes.py
project/device_emulator/: Dockerfile  main.py  nginx.conf  normal_test_drive.txt  pyproject.toml  requirements.txt  sudden_accelerations.py  vague_test_drive.txt
project/gateway/: Dockerfile  main.py  pyproject.toml  requirements.txt
project/gateway/Models/: car.py  driver.py  driver_car.py  token.py  trip.py  user.py
project/ml_inference_services/: Dockerfile  main.py  pyproject.toml  requirements.txt
project/ml_service_docker_image/: Dockerfile
project/ui/: Dockerfile  middleware.ts  package-lock.json  package.json  tsconfig.json
project/ui/app/: client_layout.tsx  forbidden.tsx  layout.tsx  page.tsx  user_context.tsx
project/ui/components/: AnimatedRouteMap.jsx  RouteMap.tsx  authorization_verification.tsx  requests_to_the_server.tsx
project/ui/models/: AxlesNumber.ts  VeincleLength.ts  car.ts  (+5 more)
(+34 files in other folders)
