[tool.poetry]
name = "device-emulator"
version = "0.1.0"
description = ""
authors = ["TVsevolodA <tri-vsal@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
